Add fields 'port_prefix', 'can_name', 'sensor_ids' and 'average_window_size' to default configuration file

--- a/src/module/conf/config.ini
+++ b/src/module/conf/config.ini
@@ -1,1 +1,8 @@
-period 0.03
+port_prefix           tactile-magnetic-sensor
+period                0.03
+# put the name returned by `ip link`
+can_name              can0
+# put as many sensors as needed in the format (<id_1>, ..., <id_n>)
+sensors_ids           (1876)
+# size of window used to average on measurements from each sensor
+average_window_size   2
