Add layout for controller application

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,3 +2,4 @@ add_subdirectory(icub-fingers-encoders)
 add_subdirectory(driver)
 add_subdirectory(module)
 add_subdirectory(logger)
+add_subdirectory(controller)
