Implement fingers veloctiy control for precise grasping

--- a/src/controller/conf/config.ini
+++ b/src/controller/conf/config.ini
@@ -1,3 +1,22 @@
+robot                 icub
 port_prefix           tactile-magnetic-sensor-controller
 period                0.01
 laterality            right
+active_fingers        (thumb, index)
+use_tactile_feedback  false
+
+[right_thumb]
+limits                (1000.0, 24.0, 1000.0)
+home                  (30.0, 12.0, 12.0)
+opening_vel           30.0
+closing_vels          (0.0, 5.0, 0.0)
+deltas                (0.0, 10.0, 0.0)
+deltas_vels           (0.0, 30.0, 0.0)
+
+[right_index]
+limits                (24.0, 1000.0)
+home                  (12.0, 12.0)
+opening_vel           30.0
+closing_vels          (5.0, 0.0)
+deltas                (10.0, 0.0)
+deltas_vels           (30.0, 0.0)
