--- a/src/controller/conf/config.ini
+++ b/src/controller/conf/config.ini
@@ -6,17 +6,33 @@ active_fingers        (thumb, index)
 use_tactile_feedback  false
 
 [right_thumb]
-limits                (1000.0, 24.0, 1000.0)
+limits                (1000.0, 40.0, 30.0)
 home                  (30.0, 12.0, 12.0)
-opening_vel           30.0
-closing_vels          (0.0, 5.0, 0.0)
+opening_vel           100.0
+closing_vels          (0.0, 100.0, 70.0)
 deltas                (0.0, 10.0, 0.0)
-deltas_vels           (0.0, 30.0, 0.0)
+deltas_vels           (0.0, 100.0, 0.0)
 
 [right_index]
 limits                (24.0, 1000.0)
-home                  (12.0, 12.0)
+home                  (3.0, 12.0)
+opening_vel           100.0
+closing_vels          (30.0, 0.0)
+deltas                (10.0, 0.0)
+deltas_vels           (100.0, 0.0)
+
+[left_thumb]
+limits                (1000.0, 24.0, 1000.0)
+home                  (50.0, 12.0, 12.0)
+opening_vel           30.0
+closing_vels          (0.0, 10.0, 0.0)
+deltas                (0.0, 10.0, 0.0)
+deltas_vels           (0.0, 100.0, 0.0)
+
+[left_index]
+limits                (24.0, 1000.0)
+home                  (3.0, 12.0)
 opening_vel           30.0
 closing_vels          (5.0, 0.0)
 deltas                (10.0, 0.0)
-deltas_vels           (30.0, 0.0)
+deltas_vels           (100.0, 0.0)
