--- a/src/controller/conf/config.ini
+++ b/src/controller/conf/config.ini
@@ -4,10 +4,14 @@ period                0.01
 laterality            right
 active_fingers        (thumb, middle)
 use_tactile_feedback  true
+threshold_0           35.0
+threshold_1           45.0
+timeout_grasp         10.0
+timeout_open          5.0
 
 [right_thumb]
-# limits                (1000.0, 40.0, 30.0)
-limits		      (1000.0, 1000.0, 1000.0)
+# limits              (1000.0, 40.0, 30.0)
+limits		          (1000.0, 1000.0, 1000.0)
 home                  (50.0, 12.0, 12.0)
 opening_vel           100.0
 closing_vels          (0.0, 60.0, 0.0)
@@ -15,8 +19,8 @@ deltas                (0.0, 10.0, 0.0)
 deltas_vels           (0.0, 100.0, 0.0)
 
 [right_index]
-# limits                (24.0, 1000.0)
-limits		      (1000.0, 1000.0)
+# limits              (24.0, 1000.0)
+limits		          (1000.0, 1000.0)
 home                  (3.0, 12.0)
 opening_vel           100.0
 closing_vels          (30.0, 0.0)
@@ -24,11 +28,11 @@ deltas                (10.0, 0.0)
 deltas_vels           (100.0, 0.0)
 
 [right_middle]
-# limits                (24.0, 1000.0)
-limits		      (1000.0, 1000.0)
+# limits              (24.0, 1000.0)
+limits		          (1000.0, 1000.0)
 home                  (3.0, 12.0)
 opening_vel           100.0
-# closing_vels          (0.0, 30.0)
+# closing_vels        (0.0, 30.0)
 closing_vels          (30.0, 30.0)
 deltas                (10.0, 0.0)
 deltas_vels           (100.0, 0.0)
