Change default configuration file of module tactile-magnetic-sensors-controller

--- a/src/controller/conf/config.ini
+++ b/src/controller/conf/config.ini
@@ -2,7 +2,7 @@ robot                 icub
 port_prefix           tactile-magnetic-sensor-controller
 period                0.01
 laterality            right
-active_fingers        (thumb, middle)
+active_fingers        (thumb, index, middle, ring)
 use_tactile_feedback  true
 timeout_grasp         10.0
 timeout_open          2.0
