Update taxels ids in configuration file

--- a/src/module/conf/config.ini
+++ b/src/module/conf/config.ini
@@ -3,7 +3,6 @@ period                0.001
 # put the name returned by `ip link`
 can_name              can0
 # put as many sensors as needed in the format (<id_1>, ..., <id_n>)
-#sensors_ids           (1889, 1892, 1908, 1904, 1860, 1857, 1877, 1876)
-sensors_ids           (289, 290, 306, 304, 258, 257, 275, 274)
+sensors_ids           (815 801 816 831 769 783 799)
 # size of window used to average on measurements from each sensor
 average_window_size   1
